--- a/public/decrypt.html
+++ b/public/decrypt.html
@@ -9,8 +9,7 @@
   <script language="Javascript" src="base64.js" type="text/javascript"></script>
   <script language="Javascript" src="sha1.js" type="text/javascript"></script>
   <script language="Javascript" src="cast5.js" type="text/javascript"></script>
-  <!--<script language="Javascript" src="openpgp.js" type="text/javascript"></script> -->
-  <script language="Javascript" src="openpgp.worker.js" type="text/javascript"></script>
+  <script language="Javascript" src="PGdecode.js" type="text/javascript"></script>
 
 
   <script language="Javascript" type="text/javascript">
@@ -38,22 +37,10 @@
     {
       var privKey=document.dec_msg.priv_key.value;
       var encoded_message = document.dec_msg.msg.value;
-      console.log(privKey);
 
-      var openpgp = window.openpgp;
+      doDecrypt(pk, qk, dk, uk, privKey, document.dec_msg.passphrase.value);
 
-      privKey = openpgp.key.readArmored(privKey);
-      //console.log(privKey[0]);
-      privKey = privKey[0];
-      //console.log(privKey);
-      var success = privKey.decrypt(pass);
-      var encMsg = openpgp.message.readArmored(encoded_message);
-      var decMsg = openpgp.decryptMessage(privKey, encMsg);
-
-      console.log(decMsg);
-
-      document.dec_msg.msg.value = decMsg;
-
+      document.dec_msg.msg.value = doDecrypt(pk, qk, dk, uk, encoded_message, document.dec_msg.passphrase.value);
       /*
      var startTime=new Date();
 
